--- a/app/src/main/res/layout/screen_favorites.xml
+++ b/app/src/main/res/layout/screen_favorites.xml
@@ -17,7 +17,7 @@
             android:layout_height="match_parent">
 
             <ImageView
-                android:id="@+id/ivSearch"
+                android:id="@+id/ivSearch1"
                 android:layout_marginRight="16dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
